[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/plants/plant.png" type="Texture" id=1]
[ext_resource path="res://src/screens/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/theme/fonts/RubikDirt-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/scenes/terrain_moderate_2.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 4 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Terrain" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.286275, 0.207843, 0.207843, 1 )
position = Vector2( -317, 139 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -238.5
margin_top = 140.0
margin_right = 238.5
margin_bottom = 183.0

[node name="Button_Continue" type="Button" parent="HBoxContainer"]
margin_right = 143.0
margin_bottom = 43.0
rect_min_size = Vector2( 143, 0 )
theme = ExtResource( 3 )
disabled = true
text = "CONTINUE"

[node name="Button_NewGame" type="Button" parent="HBoxContainer"]
margin_left = 147.0
margin_right = 330.0
margin_bottom = 43.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "NEW GAME"

[node name="Button_Quit" type="Button" parent="HBoxContainer"]
margin_left = 334.0
margin_right = 477.0
margin_bottom = 43.0
rect_min_size = Vector2( 143, 0 )
theme = ExtResource( 3 )
text = "QUIT"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -473.0
margin_top = -71.5
margin_right = 369.0
margin_bottom = 71.5
custom_fonts/font = SubResource( 2 )
text = "tHrIVE_MIND"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 1 )

[connection signal="pressed" from="HBoxContainer/Button_NewGame" to="." method="_on_Button_NewGame_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_Quit" to="." method="_on_Button_Quit_pressed"]
